# swingbot

./: README.md  main.py  pyproject.toml
jobs/: run_nse_industry_pipeline.sh  run_swing_pipeline.sh
src/: app.py  compute_mkt_db_job.py  exceptions.py  ingest.py  ingest_nse_industry_job.py  ingest_ohlcv_job.py  notes.txt  test_market_breath.ipynb  to_do.md  utils.py
src/archive/: coil.py  coil.txt
src/brokers/kite/: __init__.py  historical.py  instruments.py  login.py
src/computation/: compute.py  filter.py  indicator.py  market_breadth.py  scanner.py  test.ipynb
src/config/: base.py
src/config/brokers/: __init__.py  kite.py
src/config/computation/: __init_.py  compute.py  filter.py  indicator.py
src/config/data_sources/: __init__.py  nse.py
src/config/ingestion/brokers/: kite.py
src/config/ingestion/data_sources/: __init__.py  nse.py
src/data_sources/nse/: __init__.py  indices.py  test.ipynb
src/ingestion/: __init__.py  ingest.py  test.ipynb
src/ingestion/brokers/: exceptions.py
src/ingestion/brokers/kite/: historical.py  login.py
src/ingestion/data_sources/nse/: __init__.py  indices.py  industry.py
src/jobs/: ingest.py
src/market_dashboard/: app.py  state.py
src/market_dashboard/.streamlit/: config.toml
src/market_dashboard/modules/: breadth.py  overview.py  scanner.py
src/market_dashboard/services/: data_loader.py
src/market_dashboard_test/: state.py
src/market_dashboard_test/modules/: scanner.py
