[project]
name = "swingbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipykernel>=7.2.0",
    "isort>=8.0.1",
    "lxml>=6.0.2",
    "polars>=1.38.1",
    "ratelimit>=2.2.1",
    "ruff>=0.15.4",
    "selenium>=4.41.0",
    "streamlit>=1.54.0",
]
