[project]
name = "swingbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "connectorx>=0.4.5",
    "ipykernel>=7.2.0",
    "isort>=8.0.1",
    "kiteconnect>=5.0.1",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "polars>=1.38.1",
    "pyotp>=2.9.0",
    "ratelimit>=2.2.1",
    "ruff>=0.15.4",
    "selenium>=4.41.0",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.54.0",
]
